Bug 594650: Replace static variable in header file with static variable + accessor method, to fix codesighs & Composer.dll bustage. r=roc r=taras a=bustage